--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ footer-links:
 disqus: 
 google_analytics: UA-73349527-12
 url: https://yuuhei.github.io/xceon-blog/
-baseurl: "/xceon-blog"
+baseurl: "/"
 permalink: "/:title/"
 version: v1.2.0
 sidebar: true
